--- a/02-f1drivers/package.json
+++ b/02-f1drivers/package.json
@@ -13,6 +13,7 @@
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
+    "fecha": "^2.3.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
     "grunt-cli": "^0.1.13",
@@ -25,6 +26,7 @@
     "jquery": "^3.1.1",
     "load-grunt-tasks": "^3.3.0",
     "page": "^1.7.1",
+    "pluralize": "^4.0.0",
     "serve-static": "^1.11.1",
     "time-grunt": "^1.2.1",
     "uglifyify": "^3.0.4"
